# swarm_behaviour_sim

./: .gitignore  LICENSE  README.md  generate_data.sh  pyproject.toml  run_ants26_classif.sh  run_ants26_sim.sh  run_tests.sh
swarm_hydra/: __init__.py  entry_point.py
swarm_hydra/behaviours/: __init__.py  aggregation.py  dispersion.py  flocking.py  generate_data.py  potential_field.py  random_walk.py  utils_behaviours.py
swarm_hydra/configs/: config.yaml
swarm_hydra/configs/behaviours/: aggregation.yaml  behaviours.yaml  dispersion.yaml  flocking.yaml  foraging.yaml  homing.yaml  random_walk.yaml
swarm_hydra/configs/features/: features.yaml
swarm_hydra/configs/fit/: fit.yaml
swarm_hydra/configs/metrics/: metrics.yaml
swarm_hydra/metrics/: README.md  __init__.py  compute_metrics.py  kinematic_tree.py  proba_metrics.py  spatial_metrics.py  swarm_features_combos.py  temporal_metrics.py  utils_metrics.py
swarm_hydra/my_experi/: __init__.py  multiclass_class_experi.py  multiclass_class_experi_preprocessing.py  rand_forest_multiclass_class.py  som_multiclass_labeling_class.py
tests/: __init__.py  test_aggregation.py  test_dispersion.py  test_flocking.py  test_metrics.py  test_random_walk.py
